# mumble-overlay-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  manifest.xml
.github/workflows/: build.yml
src/: overlay_window.c  overlay_window.h  plugin.c  render_thread.c  render_thread.h  speaking_users.c  speaking_users.h
test/: test_standalone.c
